dark mode issue resolved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,8 @@
     /*write and use tailwind classes here*/
 }
 
-html {
-    @apply dark:text-zinc-200 dark:bg-zinc-900 text-zinc-900 bg-zinc-200 antialiased text-[18px] sm:text-[16px];
+body {
+    @apply dark:text-zinc-200 dark:bg-zinc-900 bg-zinc-200 text-zinc-900  antialiased text-[18px] sm:text-[16px] transition-all duration-200;
     scroll-behavior: smooth;
 }
 
